[gd_scene load_steps=11 format=2]

[ext_resource path="res://entity/player/witch_on_broom.png" type="Texture" id=1]
[ext_resource path="res://entity/player/player.gd" type="Script" id=2]
[ext_resource path="res://entity/player/boost_charged.wav" type="AudioStream" id=4]
[ext_resource path="res://entity/player/hurt.wav" type="AudioStream" id=5]
[ext_resource path="res://entity/hurt_box.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 12.0

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:invincible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
entity_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtByFloorBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtByFloorBox"]
shape = SubResource( 3 )

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invincible = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 100 )

[node name="LevelExitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelExitArea"]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
[connection signal="attacked" from="HurtBox" to="." method="_on_HurtBox_attacked"]
[connection signal="body_entered" from="HurtByFloorBox" to="." method="_on_HurtByFloorBox_body_entered"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="LevelExitArea" to="." method="_on_LevelExitArea_area_entered"]
